[package]
name = "parquet2json"
description = "A command-line tool for streaming Parquet as line-delimited JSON"
version = "3.0.0"
edition = "2021"
license = "MIT"
authors = ["Pieter Raubenheimer <pieter@wavana.com>"]
repository = "https://github.com/jupiter/parquet2json"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
parquet = { version = "51.0.0", features = ["async", "json"]}
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
