[package]
name = "parquet2json"
description = "A command-line tool for streaming Parquet as line-delimited JSON"
version = "4.0.0"
edition = "2021"
license = "MIT"
authors = ["Pieter Raubenheimer <pieter@wavana.com>"]
repository = "https://github.com/jupiter/parquet2json"

[dependencies]
arrow-array = { version = "52.0.0", features = ["chrono-tz"] }
arrow-cast = { version = "52.0.0" }
arrow-json = { version = "52.0.0" }
arrow-schema = { version = "52.0.0" }
aws-config = { version = "1.1.8" }
aws-runtime = { version = "1.1.8" }
aws-types = { version = "1.1.8" }
clap = { version = "4.5.4", features = ["derive"] }
object_store = { version = "0.10.1", features = ["aws", "http"] }
parquet = { version = "52.0.0", features = ["async", "json", "object_store"]}
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1" }
url = { version = "2.5.0" }
urlencoding = { version = "2.1.3" }
